# Sklearn-genetic-opt

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Demo_Digits_Dataset.ipynb  LICENSE  README.md  README.rst  SECURITY.md  dev-requirements.txt  docs_sample.py  ims.py  pyproject.toml  pytest.ini  readthedocs.yml  setup.py
.codex_tmp/: release-notes-0.13.3.md
.codex_tmp/pytest-pr334-temp/: cache_off.json  cache_on.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: 01-task.md  02-bug_report.md  03-feature_request.md  04-performance.md  05-documentation.md  06-refactor.md  07-question.md  bug_report.md  config.yml  feature_request.md
.github/workflows/: auto-black.yml  ci-tests.yml  docs-examples.yml  docs.yml
benchmarks/: benchmark_bayesmark.py  benchmark_cash.py  benchmark_fit.py  benchmark_search_methods.py  gridsearch_vs_gasearch_writeup.md
conda.recipe/: README.md  meta.yaml
demo/: Boson_Houses_decision_tree.ipynb  Boson_Houses_decision_tree.py  Demo_Digits_Dataset.ipynb  Demo_Digits_Dataset.py  Digits_decision_tree.ipynb  Digits_decision_tree.py  MLflow_logger.ipynb  decision_tree.py  mlflow_logger.py
docs/: api.rst  basic_usage.rst  conf.py  external_references.rst  index.rst  release_notes.rst  requirements.txt
docs-vitepress/: index.md  package-lock.json  package.json
docs-vitepress/.vitepress/: config.ts
docs-vitepress/.vitepress/theme/: custom.css  index.ts
docs-vitepress/.vitepress/theme/components/: HomeCommunity.vue  HomeEcosystem.vue  HomeExtension.vue  HomeHowItWorks.vue  HomeLearningPaths.vue  HomeQuickStart.vue  HomeRecipes.vue  HomeVisuals.vue  HomeWhyGA.vue
docs-vitepress/examples-src/: README.md  _nbgen.py  basic_usage.py  page_advanced_rf.py  page_basic_usage.py  page_checkpointing.py  page_feature_selection.py  page_imbalanced_classification.py  page_isolation_forest.py  page_multi_metric.py  page_pipeline_regression.py  page_plotting_gallery.py  page_sklearn_comparison.py  page_tune_catboost.py  page_tune_lightgbm.py  page_tune_xgboost.py  page_tutorial_feature_selection.py
docs-vitepress/public/: CNAME
docs-vitepress/scripts/: build_docs.py  check_links.py  freeze-version.mjs  run-python-examples.py  smoke_test_examples.py  test_check_links.py  test_smoke_test_examples.py
docs-vitepress/stable/: index.md
docs-vitepress/versions/0.13/: index.md  release-notes.md
docs-vitepress/versions/0.13/api/: algorithms.md  callbacks.md  config.md  gafeatureselectioncv.md  gasearchcv.md  mlflow.md  plots.md  presets.md  schedules.md  space.md
docs-vitepress/versions/0.13/benchmarks/: index.md
docs-vitepress/versions/0.13/community/: articles.md
docs-vitepress/versions/0.13/comparisons/: grid-search-vs-genetic-algorithms.md  index.md  optuna-vs-sklearn-genetic-opt.md
docs-vitepress/versions/0.13/examples/: advanced-rf.md  checkpointing.md  feature-selection.md  index.md  mlflow-tracking.md  multi-metric.md  pipeline-regression.md  plotting-gallery.md  sklearn-comparison.md
docs-vitepress/versions/0.13/guide/: adapters.md  advanced-optimizer-control.md  basic-usage.md  callbacks.md  choosing-search-spaces.md  common-mistakes.md  custom-callback.md  feature-selection-guide.md  how-hyperparameter-optimization-works.md  installation.md  migrating-from-0.12.md  mlflow.md  multi-metric.md  outliers.md  pipeline-tuning.md  reproducibility.md  troubleshooting.md  understand-cv.md  when-to-use.md
docs-vitepress/versions/0.13/recipes/: index.md
docs-vitepress/versions/0.13/tutorials/: feature-selection.md  (+10 more)
docs-vitepress/versions/latest/: index.md  release-notes.md
docs/api/: algorithms.rst  callbacks.rst  config.rst  featureselectioncv.rst  gafeatureselectioncv.rst  gasearchcv.rst  mlflow.rst  plots.rst  schedules.rst  space.rst
docs/notebooks/: Adaptive_Learning.ipynb  Advanced_breast_cancer_random_forest.ipynb  Boston_Houses_decision_tree.ipynb  Checkpointing_and_persistence.ipynb  Description  Digits_decision_tree.ipynb  Iris_feature_selection.ipynb  Iris_multimetric.ipynb  MLflow_logger.ipynb  Outlier_Detection_IsolationForest_GASearchCV.ipynb  PR_DESCRIPTION.md  Pipeline_prediction.ipynb  Plotting_gallery.ipynb  mlflow3_tracking.db  report.md  sklearn_comparison.ipynb
docs/source/: conf.py  index.rst
docs/tutorials/: adapters.rst  advanced_optimizer_control.rst  basic_usage.rst  callbacks.rst  custom_callback.rst  mlflow.rst  multi_metric.rst  outliers.rst  pipeline_tuning.rst  reproducibility.rst  troubleshooting.rst  understand_cv.rst  when_to_use.rst
sklearn_genetic/: .early_stopping.md.un~  __init__.py  _base.py  _version.py  algorithms.py  callbacks.py  config.py  early_stopping.md~  evaluation.py  genetic_search.py  mlflow.py  mlflow_log.py  optimizer_control.py  parameters.py  plots.py  population.py  presets.py  sklearn_genetic_opt.py
sklearn_genetic/callbacks/: __init__.py  base.py  early_stoppers.py  loggers.py  model_checkpoint.py  validations.py
sklearn_genetic/callbacks/tests/: test_callbacks.py
sklearn_genetic/schedules/: __init__.py  base.py  schedulers.py  validations.py
sklearn_genetic/schedules/tests/: test_schedules.py
sklearn_genetic/space/: __init__.py  base.py  converters.py  space.py  space_parameters.py
sklearn_genetic/space/tests/: test_space.py
sklearn_genetic/tests/: test_algorithms.py  test_benchmark_fit.py  test_benchmark_search_methods.py  test_callbacks.py  test_feature_selection.py  test_genetic_search.py  test_internal_helpers.py  test_internal_refactor_helpers.py  test_mlflow.py  test_outlier_detection.py  test_outliner_detection.py  test_persistence_and_helpers.py  test_plots.py  test_presets.py  test_serialization.py  test_utils.py
sklearn_genetic/tests/mlflow/: Dockerfile  conftest.py  docker-compose.yml  test_mlflow.py
sklearn_genetic/tests/unit/: test_genetic_search.py  test_plots.py
sklearn_genetic/utils/: __init__.py  cv_scores.py  logbook.py  plots.py  random.py  tools.py
sklearn_genetic_opt/: sklearn_genetic_opt.py
utils/: custom_properties.py
(+138 files in other folders)
