[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sklearn-genetic-opt"
dynamic = ["version"]
description = "Scikit-learn models hyperparameter tuning and feature selection using evolutionary algorithms"
readme = { file = "README.rst", content-type = "text/x-rst" }
requires-python = ">=3.12"
license = "MIT"
authors = [
    { name = "Rodrigo Arenas", email = "rodrigo.arenas456@gmail.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "scikit-learn>=1.9.0",
    "numpy>=2.4.6",
    "deap>=1.4.4",
    "tqdm>=4.68.3",
]

[project.optional-dependencies]
plot = [
    "seaborn>=0.13.2",
]
mlflow = [
    "mlflow>=3.14.0",
]
tensorflow = [
    "tensorflow>=2.21.0; python_version < '3.14'",
    "tensorboard>=2.20.0,<2.21.0; python_version < '3.14'",
]
test = [
    "pytest>=9.1.0",
    "pytest-cov>=7.1.0",
    "pytest-order>=1.5.0",
]
docs = [
    "sphinx>=9.1.0",
    "sphinx_gallery>=0.21.0",
    "sphinx_rtd_theme>=3.1.0",
    "sphinx-copybutton>=0.5.2",
    "numpydoc>=1.10.0",
    "nbsphinx>=0.9.8",
    "ipython>=9.14.1",
    "ipykernel>=6.30.0",
    "Pygments>=2.20.0",
    "seaborn>=0.13.2",
    "mlflow>=3.14.0",
]
build = [
    "build>=1.3.0",
    "twine>=6.2.0",
]
lint = [
    "black>=26.5.1",
]
all = [
    "seaborn>=0.13.2",
    "mlflow>=3.14.0",
    "tensorflow>=2.21.0; python_version < '3.14'",
    "tensorboard>=2.20.0,<2.21.0; python_version < '3.14'",
]
dev = [
    "pytest>=9.1.0",
    "pytest-cov>=7.1.0",
    "pytest-order>=1.5.0",
    "sphinx>=9.1.0",
    "sphinx_gallery>=0.21.0",
    "sphinx_rtd_theme>=3.1.0",
    "sphinx-copybutton>=0.5.2",
    "numpydoc>=1.10.0",
    "nbsphinx>=0.9.8",
    "ipython>=9.14.1",
    "ipykernel>=6.30.0",
    "Pygments>=2.20.0",
    "seaborn>=0.13.2",
    "mlflow>=3.14.0",
    "tensorflow>=2.21.0; python_version < '3.14'",
    "tensorboard>=2.20.0,<2.21.0; python_version < '3.14'",
    "build>=1.3.0",
    "twine>=6.2.0",
    "black>=26.5.1",
]

[project.urls]
Documentation = "https://rodrigo-arenas.github.io/Sklearn-genetic-opt/"
"Source Code" = "https://github.com/rodrigo-arenas/Sklearn-genetic-opt"
"Bug Tracker" = "https://github.com/rodrigo-arenas/Sklearn-genetic-opt/issues"

[tool.setuptools.dynamic]
version = { attr = "sklearn_genetic._version.__version__" }

[tool.setuptools.packages.find]
include = ["sklearn_genetic", "sklearn_genetic.*"]
exclude = ["*tests*"]

[tool.pytest.ini_options]
addopts = "--verbose --color=yes --assert=plain -p no:warnings --tb=short"

[tool.coverage.run]
omit = [
    "./tests/*",
    "./venv/*",
    "./docs/*",
    "./examples/*",
    "./demo/*",
    "*/tests/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
fail_under = 95
exclude_lines = [
    "pragma: no cover",
    "noqa",
]

[tool.black]
line-length = 100
target-version = ["py312"]
