[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sklearn-genetic-opt"
dynamic = ["version"]
description = "Scikit-learn models hyperparameter tuning and feature selection using evolutionary algorithms"
readme = { file = "README.rst", content-type = "text/x-rst" }
requires-python = ">=3.12"
license = "MIT"
authors = [
    { name = "Rodrigo Arenas", email = "rodrigo.arenas456@gmail.com" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "scikit-learn>=1.5.0",
    "numpy>=1.26.0",
    "deap>=1.4.0",
    "tqdm>=4.60.0",
    "pandas>=1.3.0",
]

[project.optional-dependencies]
plot = [
    "seaborn>=0.13.2",
]
mlflow = [
    "mlflow>=3.14.0",
]
tensorflow = [
    "tensorflow>=2.21.0; python_version < '3.14'",
    "tensorboard>=2.20.0,<2.21.0; python_version < '3.14'",
]
test = [
    "pytest>=9.1.0",
    "pytest-cov>=7.1.0",
    "pytest-order>=1.5.0",
]
docs = [
    "seaborn>=0.13.2",
    "scipy>=1.11.0",
    "mlflow>=3.14.0",
]
build = [
    "build>=1.3.0",
    "twine>=6.2.0",
]
lint = [
    "black>=26.5.1",
]
benchmark = [
    "scipy>=1.11.0",
    "optuna>=4.0.0",
]
all = [
    "seaborn>=0.13.2",
    "mlflow>=3.14.0",
    "tensorflow>=2.21.0; python_version < '3.14'",
    "tensorboard>=2.20.0,<2.21.0; python_version < '3.14'",
]
dev = [
    "pytest>=9.1.0",
    "pytest-cov>=7.1.0",
    "pytest-order>=1.5.0",
    "seaborn>=0.13.2",
    "scipy>=1.11.0",
    "mlflow>=3.14.0",
    "tensorflow>=2.21.0; python_version < '3.14'",
    "tensorboard>=2.20.0,<2.21.0; python_version < '3.14'",
    "build>=1.3.0",
    "twine>=6.2.0",
    "black>=26.5.1",
    "scipy>=1.11.0",
    "optuna>=4.0.0",
]

[project.urls]
Documentation = "https://sklearngeneticopt.rodrigo-arenas.com/"
"Source Code" = "https://github.com/rodrigo-arenas/Sklearn-genetic-opt"
"Bug Tracker" = "https://github.com/rodrigo-arenas/Sklearn-genetic-opt/issues"

[tool.setuptools.dynamic]
version = { attr = "sklearn_genetic._version.__version__" }

[tool.setuptools.packages.find]
include = ["sklearn_genetic", "sklearn_genetic.*"]
exclude = ["*tests*"]

[tool.pytest.ini_options]
addopts = "--verbose --color=yes --assert=plain -p no:warnings --tb=short"
testpaths = ["sklearn_genetic"]

[tool.coverage.run]
omit = [
    "./tests/*",
    "./venv/*",
    "./benchmarks/*",
    "./examples/*",
    "./demo/*",
    "*/tests/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
fail_under = 95
exclude_lines = [
    "pragma: no cover",
    "noqa",
]

[tool.black]
line-length = 100
target-version = ["py312"]
